--- a/src/Components/AuthPage.module.css
+++ b/src/Components/AuthPage.module.css
@@ -26,11 +26,19 @@
   width: 50%;
 }
 
+.loginBtns {
+  margin-bottom: 10px;
+}
+
 .signupForm {
   background: lightblue;
   width: 50%;
 }
 
-.button {
-  btn btn-primary mt-2 rounded-pill active
+.signupBtns {
+  margin-bottom: 10px;
 }
+
+/* .button {
+  btn btn-primary mt-2 rounded-pill active
+} */
