--- a/src/Components/MainPage/MainPage.css
+++ b/src/Components/MainPage/MainPage.css
@@ -69,12 +69,26 @@
 
 .settings_button {
   width: 25%;
-  margin-left: 40%;
+  margin-left: 50%;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  outline: none;
 }
 
 .input-box {
   border-radius: 50px;
   outline: 3px solid black;
+}
+
+.profile_box_image_mainUser {
+  width: 20px;
+  height: auto;
+  margin-right: 5%;
+  margin-left: 5%;
+  justify-self: center;
 }
 
 .profile_box_image {
@@ -107,6 +121,10 @@
   border-radius: 50px;
   width: calc(100% - 50px - 10px);
   margin-left: 5px;
+}
+
+.input[type="text"]::placeholder {
+  margin-left: 50px;
 }
 
 .input_message_button {
