added a logout button

--- a/src/Components/MainPage/MainPage.css
+++ b/src/Components/MainPage/MainPage.css
@@ -132,3 +132,13 @@
   width: 50px;
   margin-left: 2px;
 }
+
+.logout_button {
+  border-radius: 50px;
+  margin-left: 3%;
+  background: darkorange;
+}
+
+.logout_text {
+  margin-bottom: 0;
+}
