--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -14,23 +14,33 @@
 }
 
 .button_layout {
-  margin-left: 10px;
+  outline: 1px solid black;
   grid-row-gap: 15px;
   display: grid;
 }
 
 .button_shape {
-  width: 25%;
+  background: none;
+  border: none;
   padding: 0;
   margin: 0;
-  border-radius: 15px;
-  transition: transform 0.3s ease;
+  cursor: pointer;
+  outline: none;
+  width: 100%;
+  display: flex;
+  transition: background-color 0.3s ease;
+  margin-left: 10px;
 }
 
 .button_shape:hover {
-  transform: scale(1.1);
+  background-color: #6495ed;
 }
 
-.btntext_format {
+.font_style {
   margin: inherit;
+  font-size: 25px;
+}
+
+.button_layout_two {
+  outline: 1px solid black;
 }
