--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -60,3 +60,17 @@
   margin: inherit;
   font-size: 25px;
 }
+
+.user_credentials {
+  text-align: center;
+  margin-top: 1.5%;
+}
+
+.button_edit {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  outline: none;
+}
