--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -42,6 +42,7 @@
   width: 100%;
   display: flex;
   margin-left: 10px;
+  align-items: center;
 }
 
 .button_layout_one:hover {
@@ -73,4 +74,8 @@
   margin: 0;
   cursor: pointer;
   outline: none;
+}
+
+.btntext_format {
+  transform: translate(10px, 6px);
 }
