--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -4,6 +4,11 @@
   height: 100vh;
 }
 
+.mainColor {
+  background-color: lightskyblue;
+  border: 1px solid black;
+}
+
 .backbutton_usernamebox {
   display: flex;
   margin: 10px;
@@ -64,18 +69,24 @@
   font-size: 25px;
 }
 
+.sectionColor {
+  background-color: lightblue;
+}
+
 .user_credentials {
   text-align: center;
   margin-top: 1.5%;
 }
 
 .button_edit {
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
+  border-radius: 50px;
+  background: darkorange;
+  transition: transform 0.3s ease;
+}
+
+.button_edit:hover {
   cursor: pointer;
-  outline: none;
+  transform: scale(1.1);
 }
 
 .btntext_format {
@@ -108,6 +119,7 @@
 
 .logout_button:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 
 .logout_text {
