working on the theme options

--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -147,9 +147,9 @@
 }
 
 .mainThemeLayout {
-  border-bottom: 2px solid #000000;
+  border-bottom: 1px solid #000000;
 }
 
-.themethreelayout {
-  border-bottom: 2px solid #000000;
+.themetwolayout {
+  border-bottom: 1px solid #000000;
 }
