--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -4,6 +4,18 @@
   height: 100vh;
 }
 
+.fontSmall {
+  font-size: 14px;
+}
+
+.fontDefault {
+  font-size: 16px;
+}
+
+.fontLarge {
+  font-size: 18px;
+}
+
 .mainColor1 {
   background-color: lightskyblue;
   border: 1px solid black;
