--- a/src/Components/MainPage/MainPage.css
+++ b/src/Components/MainPage/MainPage.css
@@ -12,6 +12,18 @@
   grid-template-columns: 25% 75%;
 }
 
+.fontSmall {
+  font-size: 14px;
+}
+
+.fontDefault {
+  font-size: 16px;
+}
+
+.fontLarge {
+  font-size: 18px;
+}
+
 .group_box {
   display: flex;
   align-items: center;
